--- a/index.html
+++ b/index.html
@@ -23,142 +23,90 @@
   <body>
 
     <!-- Navigation and Logo -->
-    <header>
-        <div class="container">
-          <a href="index.html"><img src="media/catpaws-logo-final.jpg"></a>
-          <nav class="navbar">
-
-            <div class="hamburger-menu">
-              <div class="line line-1"></div>
-              <div class="line line-2"></div>
-              <div class="line line-3"></div>
-            </div>
-
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="index.html" class="nav-link"> Home</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link"> Login / Enter Secure Area</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link"> Apply for Admissions</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="checkapp.html" class="nav-link">Check Application Status for Graduate and International Students</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Apply for Housing</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Class Schedule in Detail</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="onlineclasses.html" class="nav-link">Online Class Openings</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Transfer Equivalencies</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="textbooks.html" class="nav-link">Textbook Information</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Account Payment Center</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Accessbility Mode</a>
-              </li>
-
-              <li class="nav-item">
-                <a href="blank.html" class="nav-link">Forgot Password?</a>
-              </li>
-            </ul>
-
-          </nav>
-        </div>
-    </header>
-
-<!-- Main Content-->
-    <main>
-
-      <div class="grid-container">
-        <div class="grid-styles grid-link">
-          <div class="grid-item"><a href="blank.html">Login / Enter Secure Area</a></div>
-          <div class="grid-item"><a href="blank.html">Apply for Admissions</a></div>
-          <div class="grid-item">  <a href="checkapp.html">Check Application Status for Graudate and International Students</a></div>
-          <div class="grid-item"><a href="blank.html">Apply for Housing</a></div>
-          <div class="grid-item"><a href="blank.html">Forgot Password?</a></div>
-          <div class="grid-item"><a href="blank.html">Class Schedule in Detail</a></div>
-          <div class="grid-item"><a href="blank.html">Class Openings at a Glance</a></div>
-          <div class="grid-item"><a href="onlineclasses.html">Online Class Openings</a></div>
-          <div class="grid-item"><a href="blank.html">Transfer Equivalencies</a></div>
-          <div class="grid-item">  <a href="textbooks.html">Textbook Information</a></div>
-          <div class="grid-item"><a href="blank.html">Account Payment Center</a></div>
-          <div class="grid-item"><a href="blank.html">Accessibility Mode</a></div>
-        </div>
-        </div>
-
-          <!--<li class="nav-item">
+    <div id="go-down">
+      <div class="topBar">
+        <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="logo" alt="Catpaws Logo"></a>
+        <nav class="navbar">
+          <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+          </div>
+          <ul class="nav-list">
+            <li class="nav-item">
+            <a href="index.html" class="nav-link"> Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="blank.html" class="nav-link"> Login / Enter Secure Area</a>
+          </li>
+          <li class="nav-item">
+            <a href="blank.html" class="nav-link"> Apply for Admissions</a>
+          </li>
+          <li class="nav-item">
+            <a href="checkapp.html" class="nav-link">Check Application Status for Graduate and International Students</a>
+          </li>
+          <li class="nav-item">
+            <a href="blank.html" class="nav-link">Apply for Housing</a>
+          </li>
+          <li class="nav-item">
+            <a href="blank.html" class="nav-link">Class Schedule in Detail</a>
+          </li>
+          <li class="nav-item">
             <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
           </li>
-
           <li class="nav-item">
             <a href="onlineclasses.html" class="nav-link">Online Class Openings</a>
           </li>
-
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Transfer Equivalencies</a>
           </li>
-
           <li class="nav-item">
             <a href="textbooks.html" class="nav-link">Textbook Information</a>
           </li>
-
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Account Payment Center</a>
           </li>
-
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Accessbility Mode</a>
           </li>
-
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Forgot Password?</a>
           </li>
         </ul>
       </nav>
     </div>
+  </div>
 
-      <div class="hero">
+<!-- Main Content-->
+    <main>
 
-      <h1>Welcome to Northwest Bearcats!</h1>
-      <h3>We're excited to have you!</h3>
-
-    </div>-->
-
+      <div class="grid-container">
+        <div class="grid-styles">
+          <div class="grid-item"><a href="blank.html"><img src="media/login.png" alt="Login/Enter A Secure Area"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/admissions.png" alt="apply for admissions"></a></div>
+          <div class="grid-item">  <a href="checkapp.html"><img src="media/checkapp.png" alt="Check Application Status for Graudate and International Students"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/housing.png" alt="Apply for Housing"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/password.png" alt="Forgot Password?"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/schedule.png" alt="Class Schedule in Detail"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/classopen.png" alt="Class Openings at a Glance"></a></div>
+          <div class="grid-item"><a href="onlineclasses.html"><img src="media/onlineopen.png" alt="Online Class Openings"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/transfer.png" alt="Transfer Equivalencies"></a></div>
+          <div class="grid-item"><a href="textbooks.html"><img src="media/textbookinfo.png" alt="Textbook Information"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/accpay.png" alt="Account Payment Center"></a></div>
+          <div class="grid-item"><a href="blank.html"><img src="media/accessibility.png" alt="Accessibility Mode"></a></div>
+        </div>
+        </div>
+        <div class="footerRow">
+        <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+        </div>
     </main>
 
 <!--Footer-->
     <footer>
 
-        <div class="copyright">
-          <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
+        <p>&copy; Copyright 2022.Ryann Elliff, MaKayla Polak, Landyn Cowger</p>
             <p>This page was created for Web Development II at Northwest Missouri State University and is only intended for learning purposes.</p>
-        </div>
+
 
       </footer>
 
