--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -323,7 +323,7 @@
               <option value="NW Core Physical Sciences">NW Core Physical Sciences</option>
               <option value="NW Core Social/Behavioral Sci">NW Core Social/Behaviorial Sci</option>
               <option value="NW Core Written Communication">NW Core Written Communication</option>
-            </slect>
+            </select>
             <br><br>
             <input type="submit" id="submit" value="Get Class Openings" class="btn">
           </fieldset>
