--- a/checkapp.html
+++ b/checkapp.html
@@ -8,7 +8,6 @@
   -->
   <html lang="en">
   <head>
-<<<<<<< HEAD
     <meta charset="UTF-8" />
     <title>CatPaws | Check Application Status</title>
     <link rel="stylesheet" href="css/styles.css">
@@ -25,7 +24,7 @@
     <!-- Navigation and Logo -->
     <div id="go-down">
       <div class="topBar">
-        <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="logo"></a>
+        <a href="index.html"><img src="images/catpaws-logo-final.jpg" class="logo"></a>
         <nav class="navbar">
           <div class="hamburger-menu">
             <div class="line line-1"></div>
@@ -34,36 +33,6 @@
           </div>
           <ul class="nav-list">
             <li class="nav-item">
-=======
-    <meta charset="UTF-8">
-    <title>CatPaws | Check Application Status for Graduate and International Students</title>
-        <link rel="stylesheet" href="css/stylesapp.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.ico">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.ico">
-	<link rel="icon" sizes="192x192" href="images/favicon.png">
-  </head>
-
-  <body>
-
-
-<!-- Navigation and Logo -->
-<header>
-    <div class="container">
-      <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="Catpaws Logo"></a>
-      <nav class="navbar">
-        <div class="hamburger-menu">
-          <div class="line line-1"></div>
-          <div class="line line-2"></div>
-          <div class="line line-3"></div>
-        </div>
-
-        <ul class="nav-list">
-          <li class="nav-item">
->>>>>>> 04127001bd8359964681fe73d36a2ebadea94a78
             <a href="index.html" class="nav-link"> Home</a>
           </li>
           <li class="nav-item">
@@ -105,47 +74,8 @@
         </ul>
       </nav>
     </div>
-<<<<<<< HEAD
   </div>
 
-=======
-</header>
-
-<!--Main Content-->
-<main>
-
-  <div class="grid-container">
-    <div class="grid-styles grid-link">
-      <div class="grid-item"><h3>Admission Applications</h3>for Graduation, RN to BSN and International applicants only</div>
-      <div class="grid-item"><h3>Are you a domestic undergraduate student?</h3><a href="blank.html">Start your application here!</a></div>
-      <div class="grid-item"><h3>Any Questions?</h3>If you have questions about the application or admission process, please call us at 1.800.633.1175.</div>
-      <div class="grid-item"><h3>Still having trouble?</h3>For technical issues, contact the Computing Help Desk at 660.562.1634 or helpdesk@nwmissouri.edu.</div>
-
-    <div class="grid-item2">
-      <fieldset>
-            <h3> New Users </h3>
-            <p>Create an account and start your admission application</p>
-            <a href="blank.html">Create Your Username and Pin</a>
-          </fieldset>
-        </div>
-          <br>
-        <div class="grid-item2">
-          <fieldset>
-            <h3> Returning Users</h3>
-            <p> Login using the Username and PIN that you previously created</p>
-            <a href="blank.html">Forgot Username and PIN?</a>
-            <br><br>
-            <label for="CheckAppUsername"> Username:</label>
-            <input type="text" name="CheckAppUsername" id="CheckAppUsername" required>
-            <br><br><label for="CheckAppPass"> Password:</label>
-            <input type="text" name="CheckAppPass" id="CheckAppPass" required>
-            <br><br>
-            <input type="submit" id="submit" value="Login" class="btn">
-          </fieldset>
-        </div>
-      </div>
-    </div>
->>>>>>> 04127001bd8359964681fe73d36a2ebadea94a78
 
 
 <!-- Main Content-->
@@ -187,7 +117,7 @@
 
       </div>
       <div class="footerRow">
-      <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+      <img src="images/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
       </div>
     </main>
 
