--- a/checkapp.html
+++ b/checkapp.html
@@ -24,7 +24,7 @@
     <!-- Navigation and Logo -->
     <div id="go-down">
       <div class="topBar">
-        <a href="index.html"><img src="images/catpaws-logo-final.jpg" class="logo"></a>
+        <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="logo"></a>
         <nav class="navbar">
           <div class="hamburger-menu">
             <div class="line line-1"></div>
@@ -117,7 +117,7 @@
 
       </div>
       <div class="footerRow">
-      <img src="images/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+      <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
       </div>
     </main>
 
