updates to access mode and css

--- a/access.html
+++ b/access.html
@@ -67,7 +67,7 @@
             <a href="blank.html" class="nav-link">Account Payment Center</a>
           </li>
           <li class="nav-item">
-            <a href="access.html" class="nav-link">Accessbility Mode</a>
+            <a href="blank.html" class="nav-link">Accessbility Mode</a>
           </li>
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Forgot Password?</a>
@@ -80,21 +80,19 @@
 <!-- Main Content-->
     <main>
 
-      <div class="grid-container">
-        <div class="grid-styles">
-          <div class="grid-item"><a href="blank.html"><img src="media/login.png" alt="Login/Enter A Secure Area"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/admissions.png" alt="apply for admissions"></a></div>
-          <div class="grid-item">  <a href="checkapp.html"><img src="media/checkapp.png" alt="Check Application Status for Graudate and International Students"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/housing.png" alt="Apply for Housing"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/password.png" alt="Forgot Password?"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/schedule.png" alt="Class Schedule in Detail"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/classopen.png" alt="Class Openings at a Glance"></a></div>
-          <div class="grid-item"><a href="onlineclasses.html"><img src="media/onlineopen.png" alt="Online Class Openings"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/transfer.png" alt="Transfer Equivalencies"></a></div>
-          <div class="grid-item"><a href="textbooks.html"><img src="media/textbookinfo.png" alt="Textbook Information"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/accpay.png" alt="Account Payment Center"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/accessibility.png" alt="Accessibility Mode"></a></div>
-        </div>
+      <div class="access-container">
+          <div class="grid-item"><a href="blank.html">Enter Secure Login Area</a></div>
+          <div class="grid-item"><a href="blank.html">Apply for Admissions<a></div>
+          <div class="grid-item">  <a href="checkapp.html">Check Application Status for Graudate and International Students</a></div>
+          <div class="grid-item"><a href="blank.html">Apply for Housing</a></div>
+          <div class="grid-item"><a href="blank.html">Forgot Password?</a></div>
+          <div class="grid-item"><a href="blank.html">Class Schedule in Detail</a></div>
+          <div class="grid-item"><a href="blank.html">Class Openings at a Glance</a></div>
+          <div class="grid-item"><a href="onlineclasses.html">Online Class Openings</a></div>
+          <div class="grid-item"><a href="blank.html">Transfer Equivalencies</a></div>
+          <div class="grid-item"><a href="textbooks.html">Textbook Information</a></div>
+          <div class="grid-item"><a href="blank.html">Account Payment Center</a></div>
+          <div class="grid-item"><a href="access.html">Accessibility Mode</a></div>
         </div>
         <div class="footerRow">
         <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
@@ -113,4 +111,3 @@
     <script src="script.js"></script>
 
   </body>
-</html>
