--- a/textbooks.html
+++ b/textbooks.html
@@ -66,7 +66,7 @@
             <a href="blank.html" class="nav-link">Account Payment Center</a>
           </li>
           <li class="nav-item">
-            <a href="blank.html" class="nav-link">Accessbility Mode</a>
+            <a href="access.html" class="nav-link">Accessbility Mode</a>
           </li>
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Forgot Password?</a>
@@ -85,13 +85,13 @@
           <h1>Weclome, bearcats!</h1>
           <p>The Textbooks listed for each course are not guaranteed to be all inclusive but to give you some idea of the textbook(s) that will be used for the selected course(s) that you are viewing.</p>
           <p>Due to faculty changes and other factors the textbooks and required materials might change prior to classes beginning. Some courses require purchased materials to accompany the rental materials. To view required textbooks/materials that will need to be purchased use the links below.</p>
-          <p>Online Professional (OP) students can find your textbooks with the Online Professional Textbook Finder</p>
+          <p>Online Professional (OP) students can find your textbooks with the <a href"https://cite5.nwmissouri.edu/textbookFinder/#/student/textbook-finder">Online Professional Textbook Finder</a></p>
         </div>
 
         <div class="form-container">
           <h1> Need textbook help?</h1>
-          <p>If you have any questions regarding your textbooks please feel free to contact Textbook Services. You can also reach Textbook Services by phone at 660.562.1150 </p>
-          <p>For more information about Textbook Services, visit our web site. </p>
+          <p>If you have any questions regarding your textbooks please feel free to contact Textbook Services. You can also reach Textbook Services by phone at <a href="tel:660.562.1150">660.562.1150</a> </p>
+          <p>For more information about Textbook Services, visit our <a href="https://www.nwmissouri.edu/textbooks.htm">website.</a> </p>
         </div>
 
       <fieldset class="form-container">
