--- a/checkapp.html
+++ b/checkapp.html
@@ -66,7 +66,7 @@
             <a href="blank.html" class="nav-link">Account Payment Center</a>
           </li>
           <li class="nav-item">
-            <a href="blank.html" class="nav-link">Accessbility Mode</a>
+            <a href="access.html" class="nav-link">Accessbility Mode</a>
           </li>
           <li class="nav-item">
             <a href="blank.html" class="nav-link">Forgot Password?</a>
@@ -84,14 +84,14 @@
         <div class="form-container">
           <h1>Admission Application</h1>
           <p><font color="red">*for Graduate, RN to BSN and International applicants only</font></p>
-          <p>Are you a domestic undergraduate student? Start your undergraduate application for admission here.</p>
+          <p>Are you a domestic undergraduate student? <a href="https://nwmissouri.elluciancrmrecruit.com/Apply/Account/Login?ReturnUrl=%2fApply">Start your undergraduate application for admission here.</a></p>
         </div>
 
           <div class="ca-container">
             <div class="form-container">
               <h3> Returning Users </h3>
               <p> Login using the same username and PIN that you previously created</p>
-              <p> Forgot your username or pin?</p>
+              <p><a href="https://ssbprod.nwmissouri.edu/PROD/nwforget.P_Inputdata"> Forgot your username or pin?</a></p>
 
               <label for="Username"> Username:</label>
               <input type="text" name="Username" id="Username">
@@ -102,12 +102,12 @@
             <input type="submit" id="submit" value="Login" class="button-74">
             <h3> New Users</h3>
             <p>Create an account to start your admission application.</p>
-            <p> Create your username and PIN. </p>
+            <p><a href="https://ssbprod.nwmissouri.edu/PROD/bwskalog.p_disploginnew?in_id=&cpbl=&newid="> Create your username and PIN.</a> </p>
             </div>
 
             <div class="form-container ca-spacing">
-              <p>If you have questions about the application or admission process, please call us at 1.800.633.1175.</p>
-              <p>For technical issues, contact the Computing Help Desk at 660.562.1634 or helpdesk@nwmissouri.edu.</p>
+              <p>If you have questions about the application or admission process, please call us at <a href="1.800.633.1175">1.800.633.1175.</a></p>
+              <p>For technical issues, contact the Computing Help Desk at <a href="660.562.1634">660.562.1634</a> or <a href="mailto:helpdesk@nwmissouri.edu">helpdesk@nwmissouri.edu.</a></p>
             </div>
           </div>
 
