--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         </div>
         <div class="footerRow">
-        <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+        <img src="media/mobile-nw-logo.PNG" alt="Northwest Missouri State Uiversity Logo">
         </div>
     </main>
 
