--- a/checkapp.html
+++ b/checkapp.html
@@ -8,13 +8,13 @@
   -->
   <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>CatPaws | Check Application Status</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   	<link rel="icon" type="media/png" sizes="32x32" href="media/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="media/favicon.ico">
   	<link rel="icon" sizes="192x192" href="media/favicon.png">
@@ -24,7 +24,7 @@
     <!-- Navigation and Logo -->
     <div id="go-down">
       <div class="topBar">
-        <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="logo"></a>
+        <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="Catpaws Logo" class="logo"></a>
         <nav class="navbar">
           <div class="hamburger-menu">
             <div class="line line-1"></div>
@@ -83,7 +83,7 @@
       <div class="grid-container">
         <div class="form-container">
           <h1>Admission Application</h1>
-          <p><font color="red">*for Graduate, RN to BSN and International applicants only</font></p>
+          <h4><font color="red">*for Graduate, RN to BSN and International applicants only</font></h4>
           <p>Are you a domestic undergraduate student? <a href="https://nwmissouri.elluciancrmrecruit.com/Apply/Account/Login?ReturnUrl=%2fApply">Start your undergraduate application for admission here.</a></p>
         </div>
 
