--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -8,13 +8,13 @@
   -->
   <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>CatPaws | Online Class Lookup</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400iRoboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   	<link rel="icon" type="media/png" sizes="32x32" href="media/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="media/favicon.ico">
   	<link rel="icon" sizes="192x192" href="media/favicon.png">
@@ -24,7 +24,7 @@
     <!-- Navigation and Logo -->
     <div id="go-down">
       <div class="topBar">
-        <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="logo"></a>
+        <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="catpaws logo" class="logo"></a>
         <nav class="navbar">
           <div class="hamburger-menu">
             <div class="line line-1"></div>
@@ -88,17 +88,17 @@
         </div>
 
       <fieldset class="form-container">
-        <p><font color="red">* Term selection required for all search criterias</font></p>
-        <label for="Select-Term"> Select Term * :</label>
-        <select name="references" id="reference" required class="options">
+        <p class="requiredText">* Term selection required for all search criterias</p>
+        <label> Select Term * :</label>
+        <select name="Terms" id="Term" required multiple class="options">
           <option value="Fall_2022">Fall 2022</option>
           <option value="Spring_2023">Spring 2023</option>
           <option value="Summer_2023">Summer 2023</option>
           <option value="Fall_2023">Fall 2023</option>
         </select>
         <br>
-        <label for="Select-Dept"> Search by Department:</label>
-        <select name="references" id="reference" class="options">
+        <label> Search by Department:</label>
+        <select name="Departments" id="Department" class="options">
           <option value="Accounting/51">Accounting/51</option>
           <option value="Agriculture/03">Agriculture/03</option>
           <option value="Bio_Sciences/04">Biologicial Sciences/04</option>
@@ -150,7 +150,7 @@
             <option value="Theatre/43">Theatre/43</option>
           </select>
           <br>
-          <p><font color="red">* Search by Course Number ONLY - Other Criteria are ignored</font></p>
+          <p class="requiredText">* Search by Course Number ONLY - Other Criteria are ignored</p>
             <label for="CourseNum"> Course Number (5 DIGIT number):</label>
             <input type="text" name="CourseNum" id="CourseNum">
           <br><br>
