--- a/checkapp.html
+++ b/checkapp.html
@@ -12,7 +12,7 @@
     <title>CatPaws | Check Application Status</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400iRoboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   	<link rel="icon" type="media/png" sizes="32x32" href="media/favicon.ico">
@@ -83,7 +83,7 @@
       <div class="grid-container">
         <div class="form-container">
           <h1>Admission Application</h1>
-          <h4><font color="red">*for Graduate, RN to BSN and International applicants only</font></h4>
+          <h4 class="requiredText">*for Graduate, RN to BSN and International applicants only</h4>
           <p>Are you a domestic undergraduate student? <a href="https://nwmissouri.elluciancrmrecruit.com/Apply/Account/Login?ReturnUrl=%2fApply">Start your undergraduate application for admission here.</a></p>
         </div>
 
