--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   -->
   <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>CatPaws | Online Class Openings</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400i|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400iRoboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   	<link rel="icon" type="media/png" sizes="32x32" href="media/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="media/favicon.ico">
   	<link rel="icon" sizes="192x192" href="media/favicon.png">
