mobile nav for index added

--- a/checkapp.html
+++ b/checkapp.html
@@ -117,7 +117,7 @@
 
       </div>
       <div class="footerRow">
-      <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+      <img src="media/bottom-logo.png" alt="Northwest Missouri State Uiversity Logo">
       </div>
     </main>
 
