changes made to navigation on other pages

--- a/checkapp.html
+++ b/checkapp.html
@@ -22,6 +22,7 @@
 
   <body>
     <!-- Navigation and Logo -->
+    <div class="regularNav">
     <div id="go-down">
       <div class="topBar">
         <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="Catpaws Logo" class="logo"></a>
@@ -75,6 +76,7 @@
       </nav>
     </div>
   </div>
+</div>
 
 
 
