--- a/textbooks.html
+++ b/textbooks.html
@@ -22,6 +22,7 @@
 
   <body>
     <!-- Navigation and Logo -->
+    <class="regularNav">
     <div id="go-down">
       <div class="topBar">
         <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="catpaws logo" class="logo"></a>
@@ -75,6 +76,7 @@
       </nav>
     </div>
   </div>
+</div>
 
 
 
