changes to mobile nav on multiple pages

--- a/checkapp.html
+++ b/checkapp.html
@@ -21,6 +21,32 @@
   </head>
 
   <body>
+    <!--mobile navigation-->
+    <!-- Top Navigation Menu -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <div class="topnav">
+  <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="mobileLogo"></a>
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks" class="mobileLinks">
+    <a href="blank.html">Login/Enter Secure Area</a>
+    <a href="blank.html">Apply for Admissions</a>
+    <a href="checkapp.html">Check Application Status</a>
+    <a href="blank.html"> Apply for Housing</a>
+    <a href="blank.html"> Forgot Password?</a>
+    <a href="blank.html"> Class Schedule in Detail</a>
+    <a href="blank.html"> Class Openings at a Glance</a>
+    <a href="onlineclasses.html"> Online Class Openings</a>
+    <a href="blank.html"> Transfer Equivalencies</a>
+    <a href="textbooks.html"> Textbook Information</a>
+    <a href="blank.html"> Account Payment Center</a>
+    <a href="access.html">Accessibility Mode</a>
+  </div>
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
     <!-- Navigation and Logo -->
     <div class="regularNav">
     <div id="go-down">
